Fix padding Categories in all version IOS.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -585,7 +585,7 @@ ion-app.ios [padding], ion-app.ios [padding] .padding-no .scroll-content{
 }
 
 .platform-ios .grid-tabs-splash{
-    padding-top: 20px;
+    /* padding-top: 20px; */
 }
 
 .grid-tabs-splash .col img {
