--- a/src/pages/places/places.scss
+++ b/src/pages/places/places.scss
@@ -100,6 +100,10 @@ page-places {
         overflow: hidden;
     }
 
+    .scroll-content{
+        margin-top: 20px;
+    }
+
 }
 
 places-popover-component {
